--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".fontconverter.WelcomeActivity" android:theme="@style/Theme.Design.NoActionBar">
+        <activity
+            android:name=".fontconverter.WelcomeActivity"
+            android:theme="@style/Theme.Design.NoActionBar"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
